[package]
name = "rusty_pool"
version = "0.7.0"
authors = ["robinfriedli <robinfriedli@icloud.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Self growing / shrinking `ThreadPool` implementation based on crossbeam's multi-producer multi-consumer channels that enables awaiting the result of a task and offers async support"
repository = "https://github.com/robinfriedli/rusty_pool"
homepage = "https://github.com/robinfriedli/rusty_pool"
readme = "README.md"
keywords = ["concurrency", "thread", "threadpool", "async", "futures"]
categories = ["asynchronous", "concurrency"]

[features]
default = ["async"]
async = ["futures"]

[dependencies]
crossbeam-channel = "0.5.4"
futures-channel = "0.3.21"
futures-executor = "0.3.21"
num_cpus = "1.13.1"

[dependencies.futures]
version = "0.3.21"
optional = true
